--- a/CV.html
+++ b/CV.html
@@ -74,6 +74,10 @@
         });
         });
 
+        // Add altmetric label
+        const altmetricCounts = document.querySelectorAll('.altmetricCount');
+        altmetricCounts[0].prepend("Altmetrics: ") 
+
     }
 
     
@@ -111,7 +115,7 @@
         <p>
             <span><span id="yearsPost">1</span> years post PhD</span>
             <span><span>$416k</span> funding | <span>$191k</span> as CIA </span>
-            <span><span>12</span> publications </span>
+            <span><span>13</span> publications </span>
             <span><span>80</span> citations</span>
         </p>
     </div>
@@ -364,7 +368,7 @@
                 <tr>
                     <td>
                         <img src="images/altmetrics.png" class="altmetric">
-                        Altmetrics: 7
+                        <span class="altmetricCount">51</span>
                     </td>
                 </tr>
             </table>
@@ -376,7 +380,7 @@
                 <tr>
                     <td>
                         <img src="images/altmetrics.png" class="altmetric">
-                        14
+                        <span class="altmetricCount">14</span>
                     </td>
                 </tr>
             </table>
@@ -388,7 +392,7 @@
                 <tr>
                     <td>
                         <img src="images/altmetrics.png" class="altmetric">
-                        10
+                        <span class="altmetricCount">10</span>
                     </td>
                 </tr>
             </table>
@@ -405,7 +409,7 @@
                     <tr>
                         <td>
                             <img src="images/altmetrics.png" class="altmetric">
-                            27
+                            <span class="altmetricCount">27</span>
                         </td>
                         <td>
                             2 citations
@@ -436,7 +440,7 @@
                     <tbody><tr>
                         <td>
                             <img src="images/altmetrics.png" class="altmetric">
-                            55
+                            <span class="altmetricCount">55</span>
                         </td>
                         <td>
                             3 citations
@@ -463,9 +467,9 @@
                 <table >
                  <tr>
                   <td width=159 valign=top >
-                  <p><span>
+                  <p>
                    <img src="images/altmetrics.png" class="altmetric" />
-                  </span><span >18</span></p>
+                  <span  class="altmetricCount">18</span></p>
                   </td>
                   <td width=159 valign=top >
                   <p><span >8 citations</span></p>
@@ -488,7 +492,7 @@
                   <td width=159 valign=top >
                   <p><span>
                    <img src="images/altmetrics.png" class="altmetric" />
-                  </span><span >17</span></p>
+                  </span><span  class="altmetricCount">17</span></p>
                   </td>
                   <td width=159 valign=top >
                   <p><span >4 citations</span></p>
@@ -523,9 +527,9 @@
                 <table >
                  <tr>
                   <td width=159 valign=top >
-                  <p><span ><span>
+                  <p><span >
                    <img src="images/altmetrics.png" class="altmetric" o:href="https://res-3.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco/v1469511956/oxx3evfnjtknjax5v6nx.png"/>
-                  </span>56</span></p>
+                  </span><span class="altmetricCount">56</span></p>
                   </td>
                   <td width=159 valign=top >
                   <p><span >8 citations </span></p>
@@ -554,9 +558,9 @@
                 <table >
                  <tr>
                   <td width=159 valign=top >
-                  <p><span ><span>
+                  <p><span >
                    <img src="images/altmetrics.png" class="altmetric" o:href="https://res-3.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco/v1469511956/oxx3evfnjtknjax5v6nx.png"/>
-                  </span>189</span></p>
+                  </span><span class="altmetricCount">189</span></p>
                   </td>
                   <td width=159 valign=top >
                   <p><span >11 citations</span></p>
@@ -597,9 +601,9 @@
                 <table >
                  <tr>
                   <td width=159 valign=top >
-                  <p><span ><span>
+                  <p><span >
                    <img src="images/altmetrics.png" class="altmetric" o:href="https://res-3.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco/v1469511956/oxx3evfnjtknjax5v6nx.png"/>
-                  </span>47</span></p>
+                  </span><span class="altmetricCount">47</span></p>
                   </td>
                   <td width=159 valign=top >
                   <p><span >10 citations</span></p>
@@ -632,9 +636,9 @@
                 <table >
                  <tr>
                   <td width=159 valign=top >
-                  <p><span ><span>
+                  <p><span >
                    <img src="images/altmetrics.png" class="altmetric" o:href="https://res-3.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco/v1469511956/oxx3evfnjtknjax5v6nx.png"/>
-                  </span>10</span></p>
+                  </span><span  class="altmetricCount">10</span></p>
                   </td>
                   <td width=159 valign=top >
                   <p><span >9 citations</span></p>
@@ -656,9 +660,9 @@
                 <table >
                  <tr>
                   <td width=159 valign=top >
-                  <p><span ><span>
+                  <p><span >
                    <img src="images/altmetrics.png" class="altmetric" o:href="https://res-3.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco/v1469511956/oxx3evfnjtknjax5v6nx.png"/>
-                  </span>26</span></p>
+                  </span><span class="altmetricCount">26</span></p>
                   </td>
                   <td width=159 valign=top >
                   <p><span >13 citations</span></p>
@@ -682,9 +686,9 @@
                 <table >
                  <tr>
                   <td width=159 valign=top >
-                  <p><span ><span>
+                  <p><span >
                    <img src="images/altmetrics.png" class="altmetric" o:href="https://res-3.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco/v1469511956/oxx3evfnjtknjax5v6nx.png"/>
-                  </span>3</span></p>
+                  </span><span class="altmetricCount">3</span></p>
                   </td>
                   <td width=159 valign=top >
                   <p><span >22 citations</span></p>
@@ -1142,14 +1146,18 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
-            <p><span>Collaboration of Aphasia
-            Trialists, Workgroup 4</span></p>
-            <p><span>Collaboration of Aphasia
-            Trialists, Mulitlingual Aphasia Practice Group</span></p>
-            <p><span>Centre for Research
-            Excellence in Aphasia Recovery and Rehabilitation</span></p>
-            <p><span>Aphasia CRE Post Doc and PhD
-            Students Group</span></p>
+            Member of:
+            <ul>
+                <li>Collaboration of Aphasia
+                Trialists, Workgroup 4</li>
+                <li>Collaboration of Aphasia
+                Trialists, Multilingual Aphasia Practice Group</li>
+                <li>Centre for Research
+                Excellence in Aphasia Recovery and Rehabilitation</li>
+                <li>International Stroke Recovery and Rehabilitation Alliance</li>
+                <li>Aphasia CRE Post Doc and PhD
+                Students Group</li>
+            </ul>
         </div>
         <div class="leftCol">
             <div id="StudentSupervision">Student Supervision</div>
@@ -1167,7 +1175,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
-                <p><span>Marking - Marking of final year thesis for National University of Singapore (by invitation)</span></p>
+                <p><span>Marking of final year thesis for National University of Singapore (by invitation)</span></p>
                 <p ><span>Aphasia intervention (2022).
                 Class delivered to PhD neuropsychology students by invitation, Monash
                 University.</span></p>
