--- a/index.html
+++ b/index.html
@@ -191,23 +191,13 @@
     </div>
 <!-- CONTENT LINKS -->
     <div class="contentlinks">
-        <!-- <div class="">
-            <a href="" target="">
-                <div class="cardUpper" >
-                    <img src="" alt="" style=""/>
-                </div>
-                <div class="cardLower">
-                    Heading
-                </div>
-            </a>
-        </div> -->
         <div class="Publications aphasia technology artificial_intelligence">
             <a href="https://www.tandfonline.com/doi/epdf/10.1080/09638288.2023.2199463" target="_blank">
                 <div class="cardUpper" >
                     <img src="images/AIdoughnut.jpg" alt="" style="width: 110%;margin-top: -1.2rem;"/>
                 </div>
                 <div class="cardLower">
-                    Artificial Intelligence + Aphasia<br>[scoping review]
+                    Artificial Intelligence + Aphasia<br><span style="font-weight: 300;">[scoping review]</span>
                 </div>
             </a>
         </div>
@@ -275,7 +265,6 @@
                         <i class="right arrow"></i>
                         <i class="right arrow"></i>
                         <i class="right arrow"></i>
-                        <i class="right arrow"></i>
                     </span>
                     <img src="images/video.png" alt="icon of video" style="max-height: 3rem;border-radius: 0.3rem;justify-self: left;">
                 </div>
@@ -284,15 +273,37 @@
                 </div>
             </a>
         </div>
-        <!-- <div class="Presentations_and_posters aphasia AI video_abstracts">
-            <a>
-                <div class="cardUpper">
-                    
+        <div class="aphasia dose/intensity Publications">
+            <a href="papers/Harvey et al 2022_Dose frameworks_accepted.pdf" target="_blank">
+                <div class="cardUpper" >
+                    <img src="images/MDAFcropped.png" alt="cropped blue and white figure" style="max-height: 12rem"/>
                 </div>
                 <div class="cardLower">
-                    Artificial Intelligence and aphasia management
+                    Methods of quantifying dose and intensity in aphasia
                 </div>
-            </a> -->
+            </a>
+        </div>
+        <div class="aphasia maintenance Publications">
+            <a href="maintenance.html" target="_blank">
+                <div class="cardUpper" >
+                    <img src="images/maintenanceThumbnail.jpg" alt="" style="height: 8rem;"/>
+                </div>
+                <div class="cardLower">
+                    Maintenance of gains after intensive aphasia therapy
+                    <br><span style="font-weight: 300;">Only a small portion of participants maintain their gains</span>
+                </div>
+            </a>
+        </div>
+        <!-- <div class="">
+            <a href="" target="">
+                <div class="cardUpper" >
+                    <img src="" alt="" style=""/>
+                </div>
+                <div class="cardLower">
+                    Heading
+                </div>
+            </a>
+        </div> -->
         </div>
     </div>
 </body>
