--- a/CV.html
+++ b/CV.html
@@ -1148,13 +1148,13 @@
             </div>
             Member of:
             <ul>
+                <li>International Stroke Recovery and Rehabilitation Alliance - Emerging Leaders Group</li>
                 <li>Collaboration of Aphasia
-                Trialists, Workgroup 4</li>
+                Trialists - Workgroup 4</li>
                 <li>Collaboration of Aphasia
-                Trialists, Multilingual Aphasia Practice Group</li>
+                Trialists - Multilingual Aphasia Practice Group</li>
                 <li>Centre for Research
                 Excellence in Aphasia Recovery and Rehabilitation</li>
-                <li>International Stroke Recovery and Rehabilitation Alliance</li>
                 <li>Aphasia CRE Post Doc and PhD
                 Students Group</li>
             </ul>
