--- a/index.html
+++ b/index.html
@@ -257,6 +257,16 @@
                 </div>
             </a>
         </div>
+        <div class="Publications aphasia ICAPs">
+            <a href="https://doi.org/10.1080/09638288.2021.1948621" target="_blank">
+                <div class="cardUpper" >
+                    <img src="images/ICAPs survey.png" alt="" style="width: 100%;margin-top: -7.8rem;"/>
+                </div>
+                <div class="cardLower">
+                    International survey of ICAPs
+                </div>
+            </a>
+        </div>
         <div class="Projects_and_tools Tutorials aphasia aphasia-friendly_videos video_abstracts">
             <a href="https://www.aphasiatrials.org/aphasia-friendly-video-abstract-project/" target="_blank" style="grid-template-columns: 1fr 2fr;">
                 <div class="cardUpper" style="background-color:#ace0cb;grid-template-columns: 2fr 1fr 2fr;">
