weekly inensity link

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </div>
         <div class="Publications aphasia aphasia aphasia-friendly_videos video_abstracts">
             <a href="https://doi.org/10.1080/02687038.2023.2229030" target="_blank">
-                <div class="cardUpper" >
+                <div class="cardUpper" style="background-color: #e6e6e6;">
                     <img src="images/videoabstractinfographic.jpg" alt="" style="width: 100%;margin-top: -20rem;rotate: 45deg;"/>
                 </div>
                 <div class="cardLower">
@@ -259,8 +259,8 @@
         </div>
         <div class="Publications aphasia ICAPs">
             <a href="https://doi.org/10.1080/09638288.2021.1948621" target="_blank">
-                <div class="cardUpper" >
-                    <img src="images/ICAPs survey.png" alt="" style="width: 100%;margin-top: -7.8rem;"/>
+                <div class="cardUpper" style="background-color: white;">
+                    <img src="images/ICAPs survey.png" alt="" style="width: 100%;margin-top: -7.8rem; background-color: white;"/>
                 </div>
                 <div class="cardLower">
                     International survey of ICAPs
@@ -301,6 +301,17 @@
                 <div class="cardLower">
                     Maintenance of gains after intensive aphasia therapy
                     <br><span style="font-weight: 300;">Only a small portion of participants maintain their gains</span>
+                </div>
+            </a>
+        </div>
+        <div class="aphasia dose/intensity Publications">
+            <a href="https://doi.org/10.1080/09602011.2020.1768127" target="_blank">
+                <div class="cardUpper" style="background-color: white;grid-template-columns: 1fr 1fr;">
+                    <img src="images/higherlowerweekly.png" alt="" style="height: 7rem;"/>
+                    <img src="images/higherlowerweeklyimage.png" alt="" style="height: 7rem;">
+                </div>
+                <div class="cardLower">
+                    Higher or lower therapy intensity? A review of papers comparing higher vs lower weekly intensity.
                 </div>
             </a>
         </div>
