AI images paper

--- a/CV.html
+++ b/CV.html
@@ -361,6 +361,17 @@
                 <div class="rightColMask"></div>
             </div>
             <p>
+               <b>Pierce, J. E.</b> (In Press). AI-generated images for speech pathology - an exploratory application to aphasia assessment and intervention materials. <i>American Journal of Speech-Language Pathology</i>.
+            </p>
+            <table>
+                <tr>
+                    <td>
+                        <img src="images/altmetrics.png" class="altmetric">
+                        <span class="altmetricCount"></span>
+                    </td>
+                </tr>
+            </table>
+            <p>
                 Finch, E., <b>Pierce, J. E.</b>, Pais, A. M., Dow-Richards, C., Reed, A., Charalambous, M., Matos, M. A., Wallace, S. J., & Breitenstein, C. (2023). Preferences of people with post-stroke aphasia for aphasia research videos: An international project. <i>Aphasiology</i>, 0(0), 1–12. <a href="https://doi.org/10.1080/02687038.2023.2229030">https://doi.org/10.1080/02687038.2023.2229030</a>
             </p>
             <table>
