--- a/CV.html
+++ b/CV.html
@@ -224,6 +224,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+            <p>Best Aphasia Presentation - Stroke Conference 2023</p>
             <p>Collaboration of Aphasia Trialists Resources and Recruitment Award - CATS 10 year anniversary awards 2023.</p>
             
             <p><span><span>Tavistock</span></span><span> Trust for Aphasia Student Prize - La Trobe
@@ -722,8 +723,8 @@
                 <div class="rightColMask"></div>
             </div>
                 <p><b>Pierce, J. E.</b>, Hernandez, N., Alahakoon, D., Adikari, A., Pallewela, N., Sheldrick, T., Hill, A., Ryan, B., Wong, D., Copland, D., Power, E., Kneebone, I., Togher, L., Usherwood, T., Shiggins, C., Cadilhac, D., Hill, K., Churilov, L., Worrall, L., Lanyon, L., Attard, M., Rietdijk, R., Lindley, R. I., Rose, M. L. (August, 2023). <i>What are the Highest Priority Challenges for People with Communication Disability after Discharge?</i> Stroke 2023, Melbourne, Australia.</p>
-                <p><b>Pierce, J. E.</b> (August, 2023). <i>Co-designing digital solutions for aphasia.</i>Loddon Mallee Region Speech Pathology Week Event <b>[invited speaker]</b>, Bendigo, Australia.</p>
-                <p><b>Pierce, J. E.</b>(August, 2023). <i>Technology Solutions to Post Stroke Aphasia</i>Congresso Fonoaudiológico de Bauru <b>[invited speaker]</b>, São Paulo, Brazil.</p>
+                <p><b>Pierce, J. E.</b> (August, 2023). <i>Co-designing digital solutions for aphasia. </i>Loddon Mallee Region Speech Pathology Week Event <b>[invited speaker]</b>, Bendigo, Australia.</p>
+                <p><b>Pierce, J. E.</b>(August, 2023). <i>Technology Solutions to Post Stroke Aphasia. </i>Congresso Fonoaudiológico de Bauru <b>[invited speaker]</b>, São Paulo, Brazil.</p>
             
             <p><b><span >Pierce,
                 J. E.</span></b><span >,
@@ -1176,7 +1177,7 @@
                 <div class="rightColMask"></div>
             </div>
                 <p><span>Marking of final year thesis for National University of Singapore (by invitation)</span></p>
-                <p ><span>Aphasia intervention (2022).
+                <p ><span>Aphasia intervention (2022-2023).
                 Class delivered to PhD neuropsychology students by invitation, Monash
                 University.</span></p>
                 <p ><span>Creation of lectures, <span>tutorials</span> and online content for three-week unit on
@@ -1244,7 +1245,7 @@
                   <td valign=top>
                   <p><a
                   href="http://www.twitter.com/JohnPierce85">Twitter handle</a></p>
-                  <p>2,010 followers</p>
+                  <p>2,029 followers</p>
                   </td>
                  </tr>
                  <tr>
@@ -1256,7 +1257,7 @@
                   <td valign=top>
                   <p><a
                   href="https://www.youtube.com/channel/UCtigAXfJSqqiDUhNlohcVcA/featured">YouTube Channel</a> (tutorials)</p>
-                  <p>2,510 subscribers</p>
+                  <p>2,700 subscribers</p>
                   </td>
                  </tr>
                  <tr>
@@ -1270,7 +1271,7 @@
                   <p><span><a
                   href="https://www.researchgate.net/profile/John-Pierce/"><span>ResearchGate</span></a></span><span
                   ><span></span></span></p>
-                  <p><span>80,000 paper reads</span><span
+                  <p><span>89,000 paper reads</span><span
                  ></span></p>
                   </td>
                  </tr>
