Book chapter details.

--- a/CV.html
+++ b/CV.html
@@ -721,10 +721,9 @@
                 Liamputtong (Ed.), <i>Research Methods in Health - Foundations for
                 Evidence-Based Practice</i> (4th ed.) Oxford University Press.</span></p>
                 
-                <p><span >Pierce, J. E. &amp; Vogel, A. (In Press). Chapter
-                7 - Questions about diagnosis: examples of appraisals from different health
-                professions, In Tammy Hoffmann, Sally Bennett, and Christopher Del Mar (Eds.)
-                Evidence-Based Practice across the Health Professions. Elsevier. 4th Edition.</span></p>
+                <p><span >Pierce, J. E. &amp; Vogel, A. (In Press). Clinical scenario - Questions about diagnosis: examples of appraisals from different health
+                professions, In Hoffmann, T., Bennett, S., and Del Mar, S. (Eds.)
+                <i>Evidence-Based Practice across the Health Professions.</i> Elsevier. 4th Edition.</span> Elsevier.</p>
         </div>
         <div class="leftCol">
             <div id="Presentations">Presentations</div> 
