Stroke guideline citation

--- a/CV.html
+++ b/CV.html
@@ -488,7 +488,7 @@
                   <p><span >FWCI: 1.95</span></p>
                   </td>
                  </tr>
-                <tr><span><b><i>Cited in ASHA's <a href="https://apps.asha.org/EvidenceMaps/Articles/ArticleSummary/429ffb99-e67c-4037-8051-61dfcaadf87d">Evidence Map</a></i></b></span></tr>
+                <tr><span><b><i>Cited in ASHA's <a href="https://apps.asha.org/EvidenceMaps/Articles/ArticleSummary/429ffb99-e67c-4037-8051-61dfcaadf87d">Evidence Map</a>; cited in UK Stroke Guidelines</i></b></span></tr>
                 </table>
             
                 
