Fix citation stats

--- a/CV.html
+++ b/CV.html
@@ -115,8 +115,9 @@
         <p>
             <span><span id="yearsPost">1</span> years post PhD</span>
             <span><span>$416k</span> funding | <span>$191k</span> as CIA </span>
-            <span><span>13</span> publications </span>
-            <span><span>80</span> citations</span>
+            <span><span>14</span> publications </span>
+            <span><span>147</span> citations</span>
+            <span>H-index <span>8</span></span>
         </p>
     </div>
     <div id="content">
