Create AI images page

--- a/maintenance.html
+++ b/maintenance.html
@@ -14,8 +14,8 @@
     <h1>Intensive aphasia therapy is effective when measured at <strong>group level</strong>, but many <strong>individuals</strong> do not respond significantly, and even fewer individuals <strong>maintain</strong> their initial gains.</h1>
     <h3>Maya Menahemi-Falkov, Caterina Breitenstein, John E. Pierce, Anne J. Hill, Robyn O'Halloran & Miranda L. Rose</h3>
     <div style="text-align: center;">
-        <a href="https://doi.org/10.1080/09638288.2021.1955303" div id="paperbutton">
-            <img class="pdfsvg" src="images/pdf.svg">doi.org/10.1080/09638288.2021.1955303
+        <a href="https://doi.org/10.1080/09638288.2021.1955303" div class="paperbutton">
+            <img class="pdfsvg" src="images/pdf_light.svg">doi.org/10.1080/09638288.2021.1955303
         </a>
     </div>
     <p style="text-align: justify;margin-bottom: 3rem;">We analysed 44 studies of intensive aphasia intervention (n=670 participants with post-stroke aphasia) by calculating individual-level  statistics. Only about one-third improved significantly immediately after intervention and only two-third of these maintained their improvements at follow-up. Thus, only <strong>22%</strong> of all participants improved significantly and maintained their therapy gains. <strong>This demonstrates the importance of maintenance activities.</strong>></p>
