--- a/multimodaltherapy.html
+++ b/multimodaltherapy.html
@@ -14,8 +14,8 @@
     <h1>What Is Meant by “Multimodal Therapy” for Aphasia?</h1>
     <h3>John E. Pierce, Robyn O’Halloran, Leanne Togher, and Miranda L. Rose</h3>
     <div style="text-align: center;">
-        <a href="https://doi.org/10.1044/2018_AJSLP-18-0157" div id="paperbutton">
-            <img class="pdfsvg" src="images/pdf.svg">doi.org/10.1044/2018_AJSLP-18-0157
+        <a href="https://doi.org/10.1044/2018_AJSLP-18-0157" div class="paperbutton">
+            <img class="pdfsvg" src="images/pdf_light.svg">doi.org/10.1044/2018_AJSLP-18-0157
         </a>
     </div>
     <p style="text-align: justify;margin-bottom: 3rem;">The term "multimodal therapy" is often used when talking about treatments for aphasia. But there's no clear definition of what "multimodal therapy" means. We suggest a new way to define and group these treatments</p>
