Fix bio, add PDF links

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
     <div class="profileContainer">
         <img alt="Profile photograph of John Pierce" src="images/profile.jpg" id="profileimg"/>
     </div>
-
+    <div id="nameLabel">John E. Pierce</div>
 <!-- Bio paragraph -->
     <div class="bioParagraph">
-        <p>I'm Dr <b>John Pierce</b>, a speech pathologist and researcher. I work on research, tools for speech pathologists, and technology to make life better for people with aphasia.</p>
+        <p>I'm Dr John Pierce</b>, a speech pathologist and post-doctoral researcher. I conduct research, work on tools for speech pathologists, and explore technology to assist people with aphasia.</p>
     </div>
 <!-- TOP LINKS -->
     <div class="toplinkContainer" style="display: none;">
@@ -185,14 +185,24 @@
             <a href="CV.html">CV</a>
         </div>
     </div>
-<!-- WORD CLOUD --><div id="learnAbout">Learn more about my work on:</div>
-    <div class="wordcloud">
+<!-- WORD CLOUD --><div id="learnAbout">More about my work:</div>
+    <div class="wordcloud" style="display: none;">
         
     </div>
 <!-- CONTENT LINKS -->
     <div class="contentlinks">
+        <div class="aphasia technology artificial_intelligence AI_images">
+            <a href="AI_images.html" target="">
+                <div class="cardUpper" >
+                    <img src="images/AIimages/waterfall.jpg" alt="AI generated image of a waterfall" style="width: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    Using AI-generated images for speech pathology
+                </div>
+            </a>
+        </div>
         <div class="Publications aphasia technology artificial_intelligence">
-            <a href="https://www.tandfonline.com/doi/epdf/10.1080/09638288.2023.2199463" target="_blank">
+            <a href="https://www.tandfonline.com/doi/epdf/10.1080/09638288.2023.2199463" target="">
                 <div class="cardUpper" >
                     <img src="images/AIdoughnut.jpg" alt="" style="width: 110%;margin-top: -1.2rem;"/>
                 </div>
@@ -202,17 +212,17 @@
             </a>
         </div>
         <div class="Publications aphasia aphasia aphasia-friendly_videos video_abstracts">
-            <a href="https://doi.org/10.1080/02687038.2023.2229030" target="_blank">
+            <a href="https://www.tandfonline.com/doi/epdf/10.1080/02687038.2023.2229030" target="">
                 <div class="cardUpper" style="background-color: #e6e6e6;">
                     <img src="images/videoabstractinfographic.jpg" alt="" style="width: 100%;margin-top: -20rem;rotate: 45deg;"/>
                 </div>
                 <div class="cardLower">
-                    Preferences of people w aphasia for video abstracts
+                    Preferences of people with aphasia for video abstracts
                 </div>
             </a>
         </div>
         <div class="Project_and_tools aphasia technology">
-            <a href="https://rbcavanaugh.github.io/aphasia-tech-map/" target="_blank">
+            <a href="https://rbcavanaugh.github.io/aphasia-tech-map/" target="">
                 <div class="cardUpper" >
                     <img src="images/techmap.png" alt="" style="width: 100%;"/>
                 </div>
@@ -222,7 +232,7 @@
             </a>
         </div>
         <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
-            <a href="https://doi.org/10.1080/10749357.2023.2196765" target="_blank">
+            <a href="https://www.tandfonline.com/doi/epdf/10.1080/10749357.2023.2196765" target="">
                 <div class="cardUpper" >
                     <img src="images/substudytimeline.png" alt="" style="height: 9rem;"/>
                 </div>
@@ -233,7 +243,7 @@
             </a>
         </div>
         <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
-            <a href="http://dx.doi.org/10.1136/jnnp-2021-328422" target="_blank">
+            <a href="http://dx.doi.org/10.1136/jnnp-2021-328422" target="">
                 <div class="cardUpper" style="background-color: #2490b0;grid-template-columns: 1.5fr 1fr;">
                     <img src="images/compare logo.png" alt="logo for the COMPARE aphasia trial" style="height: 7rem;justify-self: right;"/>
                     <img src="images/compareschematic.png" alt="logo for the COMPARE aphasia trial" style="height: 7rem;justify-self: left;"/>
@@ -248,7 +258,7 @@
             </a>
         </div>
         <div class="Tutorials dysarthria">
-            <a href="https://www.youtube.com/playlist?list=PLhVDZD_iZSouPkLjPXaWUx0jnX_ikT8EY" target="_blank">
+            <a href="https://www.youtube.com/playlist?list=PLhVDZD_iZSouPkLjPXaWUx0jnX_ikT8EY" target="">
                 <div class="cardUpper">
                     <img src="images/dysarthriatutorialthumbs.png" alt="thumbnails of dysarthria tutorial videos"/>
                 </div> 
@@ -258,7 +268,7 @@
             </a>
         </div>
         <div class="Publications aphasia ICAPs">
-            <a href="https://doi.org/10.1080/09638288.2021.1948621" target="_blank">
+            <a href="https://doi.org/10.1080/09638288.2021.1948621" target="">
                 <div class="cardUpper" style="background-color: white;">
                     <img src="images/ICAPs survey.png" alt="" style="width: 100%;margin-top: -7.8rem; background-color: white;"/>
                 </div>
@@ -268,7 +278,7 @@
             </a>
         </div>
         <div class="Projects_and_tools Tutorials aphasia aphasia-friendly_videos video_abstracts">
-            <a href="https://www.aphasiatrials.org/aphasia-friendly-video-abstract-project/" target="_blank" style="grid-template-columns: 1fr 2fr;">
+            <a href="https://www.aphasiatrials.org/aphasia-friendly-video-abstract-project/" target="" style="grid-template-columns: 1fr 2fr;">
                 <div class="cardUpper" style="background-color:#ace0cb;grid-template-columns: 2fr 1fr 2fr;">
                     <img src="images/document.png" alt="icon of paper document" style="max-height: 4rem;justify-self: right;">
                     <span style="justify-items: center;padding: 1rem;">
@@ -284,7 +294,7 @@
             </a>
         </div>
         <div class="aphasia dose/intensity Publications">
-            <a href="papers/Harvey et al 2022_Dose frameworks_accepted.pdf" target="_blank">
+            <a href="papers/Harvey et al 2022_Dose frameworks_accepted.pdf" target="">
                 <div class="cardUpper" >
                     <img src="images/MDAFcropped.png" alt="cropped blue and white figure" style="max-height: 12rem"/>
                 </div>
@@ -294,7 +304,7 @@
             </a>
         </div>
         <div class="aphasia maintenance Publications">
-            <a href="maintenance.html" target="_blank">
+            <a href="maintenance.html" target="">
                 <div class="cardUpper" >
                     <img src="images/maintenanceThumbnail.jpg" alt="" style="height: 8rem;"/>
                 </div>
@@ -305,7 +315,7 @@
             </a>
         </div>
         <div class="aphasia dose/intensity Publications">
-            <a href="https://doi.org/10.1080/09602011.2020.1768127" target="_blank">
+            <a href="papers/Pierce et al Intensity review Accepted.pdf" target="">
                 <div class="cardUpper" style="background-color: white;grid-template-columns: 1fr 1fr;">
                     <img src="images/higherlowerweekly.png" alt="" style="height: 7rem;"/>
                     <img src="images/higherlowerweeklyimage.png" alt="" style="height: 7rem;">
@@ -316,7 +326,7 @@
             </a>
         </div>
         <div class="aphasia Publications multi-modal_aphasia_therapy Presentations multimodal">
-            <a href="multimodaltherapy.html" target="_blank">
+            <a href="multimodaltherapy.html" target="">
                 <div class="cardUpper" >
                     <img src="images/multimodaltherapy.jpg" alt="" style="width: 70%; margin-top:-0.5rem"/>
                 </div>
