--- a/maintenance.html
+++ b/maintenance.html
@@ -18,7 +18,8 @@
             <img class="pdfsvg" src="images/pdf_light.svg">doi.org/10.1080/09638288.2021.1955303
         </a>
     </div>
-    <p style="text-align: justify;margin-bottom: 3rem;">We analysed 44 studies of intensive aphasia intervention (n=670 participants with post-stroke aphasia) by calculating individual-level  statistics. Only about one-third improved significantly immediately after intervention and only two-third of these maintained their improvements at follow-up. Thus, only <strong>22%</strong> of all participants improved significantly and maintained their therapy gains. <strong>This demonstrates the importance of maintenance activities.</strong>></p>
+    <p style="text-align: justify;margin-bottom: 3rem;" class="abstract">We analysed 44 studies of intensive aphasia intervention (n=670 participants with post-stroke aphasia) by calculating individual-level  statistics. Only about one-third improved significantly immediately after intervention and only two-third of these maintained their improvements at follow-up. Thus, only <strong>22%</strong> of all participants improved significantly and maintained their therapy gains. <strong>This demonstrates the importance of maintenance activities.
+    </strong></p>
     <div class="dark">
         <h2>Video summary</h2>
         <iframe src="https://figshare.com/ndownloader/files/29121391/preview/29121391/video_preview.mp4" width="568" height="351" allowfullscreen frameborder="0" style="display: block;margin: auto;"></iframe>
