Add pdf and model caption

--- a/multimodaltherapy.html
+++ b/multimodaltherapy.html
@@ -14,8 +14,12 @@
     <h1>What Is Meant by “Multimodal Therapy” for Aphasia?</h1>
     <h3>John E. Pierce, Robyn O’Halloran, Leanne Togher, and Miranda L. Rose</h3>
     <div style="text-align: center;">
+        <a href="papers/Pierce et al Multimodal Accepted.pdf" div class="paperbutton">
+            <img class="pdfsvg" src="images/pdf_light.svg">Author PDF
+        </a>
         <a href="https://doi.org/10.1044/2018_AJSLP-18-0157" div class="paperbutton">
-            <img class="pdfsvg" src="images/pdf_light.svg">doi.org/10.1044/2018_AJSLP-18-0157
+            <img class="pdfsvg" src="images/pdf_dark.svg" style="width: 1px;height: calc(1rem*4/3);">
+            doi.org/10.1044/2018_AJSLP-18-0157
         </a>
     </div>
     <p style="text-align: justify;margin-bottom: 3rem;">The term "multimodal therapy" is often used when talking about treatments for aphasia. But there's no clear definition of what "multimodal therapy" means. We suggest a new way to define and group these treatments</p>
@@ -26,7 +30,14 @@
         </div>
     </div>
     <div class="dark" style="text-align: center;">
-        <h2>Proposed definitions</h2>
+        <h2>Proposed model</h2>
         <img src="images/multimodaltherapy.jpg" style="width: 70%;max-width: 600px;">
+        <p>The three broad, proposed categories are: 
+            <ol>
+                <li>Verbal therapies, that use speech and orthography only (with or without picture stimuli)</li>
+                <li>Multimodal therapies <i>to improve verbal communication</i> (speech or spelling)</li>
+                <li>Multimodal therapies <i>to improve total communication</i> (any modality)</li>
+            </ol>
+        </p>
     </div>
 </body>
