Temp hide maintenance

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 </div>
             </a>
         </div>
-        <div class="aphasia maintenance Publications">
+        <div class="aphasia maintenance Publications" style="display: none;">
             <a href="maintenance.html" target="">
                 <div class="cardUpper" >
                     <img src="images/maintenanceThumbnail.jpg" alt="" style="height: 8rem;"/>
