--- a/AI_images.html
+++ b/AI_images.html
@@ -99,7 +99,7 @@
         <h3 style="text-align: center;">John E. Pierce</h3>
         <p style="text-align: center; font-weight: normal;"><i>With thanks to Jon Hunt and Robin Keech from <a href="http://cuespeak.com">Cuespeak</a> for their input</i></p>
         <div style="text-align: center;">
-            <a href="http://dx.doi.org/10.1044/2023_AJSLP-23-00142" div class="paperbutton_light paperbutton">
+            <a href="papers/Pierce AI-Generated Images Accepted.pdf" div class="paperbutton_light paperbutton">
                 <img class="pdfsvg" src="images/pdf_dark.svg">Author PDF
             </a>
             <a href="http://dx.doi.org/10.1044/2023_AJSLP-23-00142" div class="paperbutton_light paperbutton">
